[package]
name = "ajv-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12", features = ["napi4", "serde-json"] }
napi-derive = "2.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.29.0"
mimalloc = "0.1"
simd-json = "0.13"

[build-dependencies]
napi-build = "2.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
