[package]
name = "ajv-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12", features = ["napi4", "serde-json"] }
napi-derive = "2.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.29.0"
simd-json = "0.13"

# MacOS / Windows
# [target.'cfg(not(any(target_os = "linux", target_os = "android", target_os = "freebsd", target_arch = "arm", target_family = "wasm")))'.dependencies]
# mimalloc-safe = { version = "0.1", features = ["skip_collect_on_exit"] }

# Linux x64 (glibc/musl)
# [target.'cfg(all(target_os = "linux", not(target_arch = "arm"), not(target_arch = "aarch64")))'.dependencies]
# mimalloc-safe = { version = "0.1", features = ["skip_collect_on_exit", "local_dynamic_tls"] }

# Linux ARM64 (glibc/musl)
# [target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
# mimalloc-safe = { version = "0.1", features = ["skip_collect_on_exit", "local_dynamic_tls", "no_opt_arch"] }



[build-dependencies]
napi-build = "2.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
